tests/machine/x/pascal/join_multi.error
line: 71
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/join_multi.pas
join_multi.pas(51,11) Error: Identifier not found "c"
join_multi.pas(53,46) Error: Identifier not found "c"
join_multi.pas(54,15) Error: Identifier not found "i"
join_multi.pas(56,42) Error: Identifier not found "i"
join_multi.pas(58,42) Error: Identifier not found "c"
join_multi.pas(59,41) Error: Identifier not found "i"
join_multi.pas(71) Fatal: There were 6 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

